fixes run node pagination on mobile

--- a/src/pages/RunNode/runnode.scss
+++ b/src/pages/RunNode/runnode.scss
@@ -50,6 +50,7 @@
 
       .box-list {
         display: flex;
+        margin-top: 24px;
         margin-bottom: 40px;
 
         .box-list-col {
@@ -99,8 +100,8 @@
         border-radius: 4px;
         color: white;
         width: 35%;
-        margin-left: 10%;
-        margin-top: 5%;
+        margin-right: 24px;
+        margin-top: 24px;
       }
     }
   }
@@ -114,6 +115,14 @@
           width: 100%;
           margin-top: 0;
           margin-bottom: 24px;
+
+          .box-pagination {
+            position: inherit;
+            top: auto;
+            right: auto;
+            margin-top: 24px;
+            justify-content: flex-end;
+          }
 
           .box-list {
             display: inherit;
@@ -132,9 +141,7 @@
 
           & > .referenceButton {
             width: 100%;
-            margin-left: 0;
-            margin-bottom: 0;
-            margin-top: 24px;
+            margin-right: 0;
           }
 
           & > .referenceButton:first-child {
